re-organized the source directory

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -9,26 +9,26 @@ file(GLOB_RECURSE CUKE_CPP_LIB_SOURCES "${CUKE_CPP_LIB_SRC_DIR}/*.[ch]pp")
 list(APPEND CUKE_CPP_LIB_ALL_SOURCES ${CUKE_CPP_LIB_SOURCES})
 
 set(CUKE_CPP_LIB_SOURCES
-    client/CukeDocument.cpp
-    client/CukeDocument.hpp
-    internal/ConsoleReporter.cpp
-    internal/ConsoleReporter.hpp
-    internal/CukeRunner.cpp
-    internal/CukeRunner.hpp
-    internal/CukeUtilities.cpp
-    internal/CukeUtilities.hpp
-    internal/EventListener.cpp
-    internal/EventListener.hpp
-    internal/FilterTagOptions.cpp
-    internal/FilterTagOptions.hpp
-    internal/HtmlReporter.cpp
-    internal/HtmlReporter.hpp
-    internal/JsonReporter.cpp
-    internal/JsonReporter.hpp
-    internal/ReporterOptions.cpp
-    internal/ReporterOptions.hpp
-    server/CukeServer.cpp
-    server/CukeServer.hpp
+    ConsoleReporter.cpp
+    ConsoleReporter.hpp
+    CukeDocument.cpp
+    CukeDocument.hpp
+    CukeRunner.cpp
+    CukeRunner.hpp
+    CukeServer.cpp
+    CukeServer.hpp
+    CukeUtilities.cpp
+    CukeUtilities.hpp
+    EventListener.cpp
+    EventListener.hpp
+    FilterTagOptions.cpp
+    FilterTagOptions.hpp
+    HtmlReporter.cpp
+    HtmlReporter.hpp
+    JsonReporter.cpp
+    JsonReporter.hpp
+    ReporterOptions.cpp
+    ReporterOptions.hpp
 )
 
 target_sources(
@@ -68,7 +68,7 @@ set_target_properties(
 target_sources(
     cukecpp_lib
     PRIVATE
-        internal/main.cpp
+        main.cpp
 )
 
 target_link_libraries(
