--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,7 @@ sonar.projectVersion=1.0
 # =====================================================
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=src,include
+#sonar.sources=src,include
 #sonar.tests=tests
 
 # Encoding of the source code. Default is default system encoding
